--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -27,6 +27,9 @@
     <string name="soft_reboot">Hızlı yeniden başlat</string>
     <string name="reboot">Yeniden başlat</string>
     <string name="reboot_recovery">Kurtarma modunda yeniden başlat</string>
+    <string name="dexopt_now">Uygulamaları optimize et</string>
+    <string name="this_may_take_a_while">Bu biraz zaman alabilir.</string>
+    <string name="done">Tamam!</string>
     <string name="not_now">Şimdi değil</string>
     <string name="reboot_failed">Yeniden başlatılamıyor. Lütfen cihazın normal yeniden başlatma işlevini kullanın.</string>
     <string name="auto_flash_note">Tamama bastığınızda %s otomatik olarak yüklenmelidir.</string>
@@ -59,6 +62,9 @@
     <string name="framework_delete">İndirilen dosyayı sil</string>
     <string name="framework_zip_load_failed">Kullanılabilir ZIP dosyaları yüklenemedi. Tekrar denemek için aşağı doğru çekin.</string>
     <string name="framework_no_zips">Eşleşen hiçbir zip bulunamadı, cihazınız şu anda desteklenmiyor gibi görünüyor.</string>
+    <string name="verified_boot_deactivated">Önyükleme Doğrulaması kapalı</string>
+    <string name="verified_boot_active">Önyükleme Doğrulaması aktif</string>
+    <string name="verified_boot_explanation">Önyükleme Doğrulaması (dm-verity) sistem klasörü modifiye edilmişse cihazın başlamasını engeller.\n<b>Xposed yüklenmesi önerilmez!</b></string>
 
     <!-- File operations -->
     <string name="root_failed">Root erişimi alınamadı.\n\nCihazınızın doğru şekilde rootlandığından ve komut alabildiğinden emin olun.</string>
