--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -22,22 +22,46 @@
     <string name="navigation_drawer_close">关闭导航抽屉</string>
 
     <!-- Installer tab -->
-    <string name="install_update">安装/更新</string>
+    <string name="install_update">安装 / 更新</string>
     <string name="uninstall">卸载</string>
     <string name="soft_reboot">软重启</string>
     <string name="reboot">重启设备</string>
     <string name="reboot_recovery">重启设备至恢复模式</string>
+    <string name="not_now">不要现在</string>
     <string name="reboot_failed">重启设备失败。请使用设备的标准重启功能。</string>
-    <string name="auto_flash_note">当你按下 OK 后，%s 将会被自动刷入设备。</string>
+    <string name="auto_flash_note">当你按下 OK 后，%s 将会被自动刷入。</string>
     <string name="reboot_confirmation">您现在要重启设备吗？</string>
     <string name="install_warning_title">小心！</string>
+    <string name="install_warning">在某些情况下，安装 Xposed 后，您的设备可能再也无法启动。\n\n如果你从未听说过“变砖”和“引导循环”或不知道如何修复，请 <b>不要</b> 安装 Xposed！\n\n无论如何，建议你先进行备份。</string>
     <string name="dont_show_again">不要再显示这个</string>
-    <string name="install_known_issue">Xposed 与您的 ROM 似乎存在已知的问题（“%s”）。安装 Xposed 可能无法工作或引发严重问题。点击此处获知问题详情。</string>
-    <string name="framework_active">Xposed 框架 %s 版已激活。</string>
-    <string name="framework_not_active">Xposed 框架 %s 版已安装，但未激活。请检查日志的详细信息。</string>
+    <string name="install_known_issue">Xposed 与您的 ROM 似乎存在已知的问题（“%s”），Xposed 可能无法工作或引发严重问题。点击此处查看问题详情。</string>
+    <string name="installer_needs_update">%1$s 需要升级</string>
+    <string name="known_issue_wrong_base_directory">错误的根目录</string>
+    <string name="known_issue_missing_base_directory">找不到根目录</string>
+    <string name="framework_active">Xposed 框架 %s 已激活。</string>
+    <string name="framework_not_active">Xposed 框架 %s 已安装，但未激活。请检查日志的详细信息。</string>
     <string name="framework_not_installed">Xposed 框架未安装。</string>
 
+    <string name="flash_error_timeout">发生超时</string>
+    <string name="flash_error_shell_died">执行意外中止</string>
+    <string name="flash_error_invalid_zip">不是可刷写的ZIP文件</string>
+    <string name="flash_error_not_flashable_in_app">此文件只能通过 Recovery 刷写。</string>
+    <string name="flash_error_default">发生了 %d 错误</string>
+    <string name="status">Xposed 状态</string>
+    <string name="xposed_on_next_reboot">Xposed 框架将在下次重启后启用</string>
+    <string name="xposed_off_next_reboot">Xposed 框架将在下次重启后禁用</string>
+    <string name="show_outdated">显示过时的版本</string>
+    <string name="framework_device_info">设备状态</string>
+    <string name="framework_install">安装</string>
+    <string name="framework_uninstall">卸载</string>
+    <string name="framework_install_recovery">通过 Recovery 安装</string>
+    <string name="framework_uninstall_recovery">通过 Recovery 卸载</string>
+    <string name="framework_delete">删除已下载的文件</string>
+    <string name="framework_zip_load_failed">无法加载可用的 zip 文件，请试试下拉刷新。</string>
+    <string name="framework_no_zips">找不到匹配的 zip 包，您的设备似乎不受支持。</string>
+
     <!-- File operations -->
+    <string name="root_failed">无法获取 root 权限，\n\n请确保您的设备已 root 且未禁止 shell 命令。</string>
     <string name="file_copying">正在复制 %s…</string>
     <string name="file_copy_failed">无法将 %1$s 复制到 %2$s</string>
     <string name="file_creating_directory">正在创建目录 %s…</string>
@@ -50,17 +74,19 @@
     <string name="module_is_not_activated_yet">Xposed 模块未激活</string>
     <string name="module_is_not_activated_yet_detailed">%s 已安装，但尚未激活。</string>
     <string name="activate_and_reboot">激活并重启设备</string>
+    <string name="activate_only">仅激活</string>
     <string name="module_activated">Xposed 模块已激活</string>
     <string name="module_empty_description">（未提供描述）</string>
     <string name="module_no_ui">该模块未提供用户界面</string>
     <string name="no_xposed_modules_found">未找到 Xposed 模块！</string>
+    <string name="xposed_module_list_updated">Xposed 模块列表已更新\n重启后将应用更改</string>
     <string name="xposed_module_updated_notification_title">Xposed 模块已更新</string>
-    <string name="xposed_module_updated_notification">重启设备以激活更新。</string>
+    <string name="xposed_module_updated_notification">重启设备以启用更新</string>
     <string name="warning_xposed_min_version">该模块需要 Xposed 新版（%d），因此无法激活。</string>
     <string name="no_min_version_specified">该模块未指定需要的 Xposed 版本。</string>
     <string name="warning_min_version_too_low">该模块在 Xposed %1$d 版下创建，但因为不兼容 %2$d 版中的更改，它已被禁用。</string>
     <string name="module_launch">开启用户界面</string>
-    <string name="module_download_updates">下载/更新</string>
+    <string name="module_download_updates">下载 / 更新</string>
     <string name="module_support">支持</string>
     <string name="module_app_info">应用信息</string>
     <string name="module_uninstall">卸载</string>
@@ -102,15 +128,22 @@
 
     <!-- Settings tab -->
     <string name="settings_group_download">下载</string>
+    <string name="settings_enable_downloads">启用下载</string>
+    <string name="settings_enable_downloads_summary">允许 Xposed Installer 检查并更新模块</string>
     <string name="settings_release_type">将显示的版本</string>
     <string name="settings_group_experimental">实验性</string>
     <string name="settings_disable_resources">禁用资源钩子</string>
+    <string name="settings_disable_resources_summary">与主题引擎冲突的解决方法\n<b>警告：</b>启用此功能后，尝试更改资源的模块将无法运行。</string>
     <string name="settings_group_app">应用</string>
     <string name="settings_theme">主题</string>
     <string name="settings_theme_light">亮色</string>
     <string name="settings_theme_dark">暗色</string>
     <string name="settings_theme_black">黑色（对 AMOLED 屏幕有益）</string>
     <string name="settings_default_view">默认视图</string>
+    <string name="open_drawer_summ">启动时自动打开导航抽屉</string>
+    <string name="open_drawer">自动打开导航抽屉</string>
+    <string name="skip_xposedminversion_check">跳过“Xposed 最小版本”检查</string>
+    <string name="skip_xposedminversion_check_summ"><为模块></为模块>跳过“Xposed 最小版本”检查</string>
     <string name="chrome_custom_tabs">Chrome 自定义标签</string>
     <string name="chrome_custom_tabs_summ">在内置浏览器中打开链接</string>
     <string name="notify_module_update">启用模块更新通知</string>
@@ -124,18 +157,22 @@
     <string name="support_donate_description">如果您想感谢 Xposed 作者，可以在此向 rovo89 捐赠</string>
 
     <!-- Logs tab  -->
+    <string name="logs_load_failed">无法读取日志：</string>
     <string name="logs_save_failed">无法将日志写入 SD 卡：</string>
     <string name="sdcard_not_writable">SD 卡未找到或不可写入</string>
+    <string name="log_too_large">日志文件大于 %1$,d kB，跳过首个 %2$,d kB</string>
     <string name="menuClearLog">立刻清理日志</string>
     <string name="logs_cleared">日志清理成功</string>
     <string name="logs_clear_failed">无法清理日志：</string>
     <string name="log_is_empty">日志为空</string>
     <string name="scroll_top">滚动页面至顶部</string>
+    <string name="scroll_bottom">滚动页面至底部 </string>
 
     <!-- About tab -->
     <string name="about_developers_label">主要开发者</string>
-    <string name="about_translator_label">翻译</string>
-    <string name="translator">Phantom</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 和 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n<a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> 和 <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> 提供了 bug 修复和 UI 设计</string>
+    <string name="about_translator_label">译者</string>
+    <string name="translator">Phantom 和 <a href="https://github.com/VergeDX">Vanilla</a></string>
     <string name="about_version_label">版本</string>
     <string name="about_source_label">源码</string>
     <string name="about_libraries_label">使用的库文件</string>
@@ -149,20 +186,26 @@
     <string name="download_view_waiting">下载等待中</string>
     <string name="download_view_successful">下载成功</string>
     <string name="download_view_failed">下载失败（错误 %d）</string>
+    <string name="download_view_size">文件大小：%s KB</string>
 
     <!-- DownloadUtils -->
     <string name="download_md5sum_incorrect">MD5 校验码错误（下载项：%1$s，预期：%2$s）</string>
     <string name="download_could_not_read_file">无法读取下载文件：%s</string>
     <string name="download_no_valid_apk">下载的文件不是有效的 APK（或不兼容）</string>
     <string name="download_incorrect_package_name">包名错误（下载项：%1$s，预期：%2$s）</string>
+    <string name="download_running">下载重</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">下载 %1$s 失败：%2$d（%3$s）</string>
     <string name="repo_download_failed">下载 %1$s 失败：%2$s</string>
+    <string name="repo_load_failed">无法加载模块仓库 %1$s:\n%2$s</string>
 
     <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">该模块不能载入，因为它安装在 SD 卡上，请将它移至内部存储。</string>
-    <string name="view">视图</string>
+    <string name="warning_forward_locked">此模块无法加载，因为它是前向锁定的，请联系模块的开发人员。</string>
+    <string name="export_modules">导出已启用的模块列表</string>
+    <string name="import_modules">导入已启用的模块列表</string>
+    <string name="view">查看</string>
     <string name="export_">导出…</string>
     <string name="import_">导入…</string>
     <string name="export_enabled_modules">导出已启用模块列表</string>
@@ -173,7 +216,7 @@
     <string name="no_backup_found">未找到备份</string>
     <string name="no_enabled_modules">未启用任何模块</string>
     <string name="share">分享</string>
-    <string name="permissionNotGranted">没有写入外部存储权限该功能将不能工作。</string>
+    <string name="permissionNotGranted">没有写入外部存储权限，该功能将不能工作。</string>
     <string name="add_bookmark">添加书签</string>
     <string name="remove_bookmark">移除书签</string>
     <string name="bookmarks">书签</string>
@@ -184,5 +227,6 @@
     <string name="file_is_empty">文件为空</string>
     <string name="install_remove">安装和移除</string>
     <string name="loading">载入中…</string>
+    <string name="update_download_list">下拉刷新模块列表</string>
 
 </resources>
